// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComplianceDashboard component when there are merge requests and the show tabs cookie is true matches the snapshot 1`] = `
<div
  class="compliance-dashboard"
>
  <header>
    <div
      class="gl-mt-5 d-flex"
    >
      <h4
        class="gl-flex-grow-1 gl-my-0"
      >
        Compliance Dashboard
      </h4>
       
      <merge-commits-export-button-stub
        mergecommitscsvexportpath="/csv"
      />
    </div>
     
    <p>
      Here you will find recent merge request activity
    </p>
  </header>
   
  <gl-tabs-stub
    queryparamname="tab"
    theme="indigo"
    value="0"
  >
    <b-tab-stub
      tag="div"
      title=""
      titlelinkclass="gl-tab-nav-item"
    >
      <template>
         
        <merge-requests-grid-stub
          mergerequests="[object Object],[object Object]"
        />
      </template>
      <template>
        <span>
          Merge Requests
        </span>
      </template>
    </b-tab-stub>
  </gl-tabs-stub>
   
  <!---->
</div>
`;

exports[`ComplianceDashboard component when there are merge requests matches the snapshot 1`] = `
<div
  class="compliance-dashboard"
>
  <header>
    <div
      class="gl-mt-5 d-flex"
    >
      <h4
        class="gl-flex-grow-1 gl-my-0"
      >
        Compliance Dashboard
      </h4>
       
      <merge-commits-export-button-stub
        mergecommitscsvexportpath="/csv"
      />
    </div>
     
    <p>
      Here you will find recent merge request activity
    </p>
  </header>
   
  <merge-requests-grid-stub
    mergerequests="[object Object],[object Object]"
  />
   
  <!---->
</div>
`;

exports[`ComplianceDashboard component when there are no merge requests matches the snapshot 1`] = `
<empty-state-stub
  imagepath="empty.svg"
/>
`;
